--- a/angular/src/app/map/map.component.css
+++ b/angular/src/app/map/map.component.css
@@ -4,8 +4,9 @@
   /* Give the map a defined size to view the content */
   width: 100%;
   height: 90vh;
-  border: 1px solid #ccc;
   overflow: hidden;
+
+  box-shadow: 0 30px 40px rgba(0,0,0,.1);
 
   /* Cursors for user experience */
   cursor: grab;
