--- a/angular/src/app/user-profile/user-profile.component.css
+++ b/angular/src/app/user-profile/user-profile.component.css
@@ -335,6 +335,7 @@ button {
 .event-details .small-line {
   font-size: 0.6rem;
   color: rgba(226, 232, 240, 0.4);
+  background-color:
 }
 
 .event-row:hover .event-details {
@@ -346,6 +347,7 @@ button {
 .map-column {
   grid-area: right;
   height: 100%;
+
 }
 
 .map-placeholder {
