--- a/angular/src/app/user-profile/user-profile.component.css
+++ b/angular/src/app/user-profile/user-profile.component.css
@@ -339,6 +339,7 @@ button {
 .event-details .small-line {
   font-size: 0.6rem;
   color: rgba(226, 232, 240, 0.4);
+  background-color:
 }
 
 .event-row:hover .event-details {
@@ -350,6 +351,7 @@ button {
 .map-column {
   grid-area: right;
   height: 100%;
+
 }
 
 .map-placeholder {
@@ -358,6 +360,8 @@ button {
   display: grid;
   place-items: center;
   color: rgba(226, 232, 240, 0.4);
+
+  background:white;
   font-size: 0.8rem;
   border-style: dashed;
   border-color: rgba(148, 163, 184, 0.3);
